--- a/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
@@ -7,20 +7,27 @@
 <div class="products">
     @foreach (var item in Model)
     {
-        <a href="@Url.Action("Details", "Products", new { id = item.ID })"
-           class="product">
+    <a href="@Url.Action("Details", "Products", new { id = item.ID })"
+       class="product">
 
         <img src="@Url.Content("~/Content/Images/table.jpg")" alt="Marble table"
-                 class="img-responsive" />
-            <h2>@item.Name</h2>
-            <p>
-                <span class="price">@item.Price kr</span>
-                <span class="="btn btn-success buy">
-                    <span class="glyphicon glyphicon-shopping-cart"></span>
-                    Köp
-                </span>
-            </p>
-            <p class="desc">@item.Description</p>
-            </a>
+             class="img-responsive" />
+
+        <img src="@Url.Content("~/Content/Images/armchair.jpg")" alt="Marble table"
+             class="img-responsive" />
+        <h2>@item.Name</h2>
+        <p>
+            <span class="price">@item.Price kr</span>
+            <span class="=" btn btn-success buy">
+                <span class="glyphicon glyphicon-shopping-cart"></span>
+                Köp
+            </span>
+        </p>
+        <p class="desc">@item.Description</p>
+    </a>
     }
+
+    @using(Html.BeginForm("Index, "Products", FormMethod.Get))
+            {
+    <input type="text" id=""search"}
 </div>
