--- a/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <img src="@Url.Content("~/Content/Images/logga-.png")" alt="" class="logo" height="75" width="550">
+      <img src="@Url.Content("~/Content/Images/logga-.png")" alt="" class="logo">
         <div class="container">
 
             <div class="navbar-header">
