--- a/Webbprojekt-TE15C-1/Views/Products/Create.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Products/Create.cshtml
@@ -7,7 +7,8 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Products", FormMethod.Post,
+    new { encType = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -42,8 +43,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Imagefile, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Imagefile, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Imagefile, "", new { @class = "text-danger" })
+                 <input type="file" id="file" name="file" class="form-control" />
+                 @Html.ValidationMessageFor(model => model.Imagefile, "", new { @class = "text-danger" })
             </div>
         </div>
 
