--- a/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Momentum Viveri</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">s
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -11,7 +10,7 @@
 <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <img src="@Url.Content("~/Content/Images/logga-.png")" alt="" class="logo">
+      <img src="@Url.Content("~/Content/Images/logo.png")" alt="" class="logo">
         <div class="container">
 
             <div class="navbar-header">
