--- a/Webbprojekt-TE15C-1/Views/Manage/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Manage/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Manage";
 }
-
+<title>Momento Viveri</title>
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
