--- a/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+<title>Momento Viveri</title>
 <div class="jumbotron">
     <h1>MOMENTO VIVERI</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
