--- a/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
@@ -3,12 +3,12 @@
 }
 
 <div class="jumbotron">
-    <h1>MOMENTO VIVERI</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 <br>
     <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img1" >
-    <img src="@Url.Content("~/Content/Images/ram.jpg")" alt="" class="img2" >
+    <div class="image-container"> <img src="@Url.Content("~/Content/Images/ram.jpg")" class="img2" alt="" >
+    <img src="@Url.Content("~/Content/Images/ram2.jpg")" class="img22" alt="" > </div>
     <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img3" >
     <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img4" >
     <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img5" >
