--- a/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+
+
+@{
     ViewBag.Title = "Home Page";
 }
 <title>Momento Viveri</title>
@@ -6,12 +8,12 @@
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 <br>
-    <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img1" >
+    <img src="@Url.Content("~/Content/Images/img1.jpg")" alt="" class="img1" >
     <div class="image-container"> <img src="@Url.Content("~/Content/Images/ram.jpg")" class="img2" alt="" >
     <img src="@Url.Content("~/Content/Images/ram2.jpg")" class="img22" alt="" > </div>
-    <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img3" >
-    <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img4" >
-    <img src="@Url.Content("~/Content/Images/img.png")" alt="" class="img5" >
+    <img src="@Url.Content("~/Content/Images/img3.jpg")" alt="" class="img3" >
+    <img src="@Url.Content("~/Content/Images/img4.jpg")" alt="" class="img4" >
+    <img src="@Url.Content("~/Content/Images/img5.jpg")" alt="" class="img5" >
 </div>
 
 <div class="row">
