--- a/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 
@@ -43,7 +43,35 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <div class="Kund">
+                <h3>Kundservice</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Köpvillkor & Info</a></li>
+                    <li><a href="#">Kontakta oss</a></li>
+                </ul>
+            </div>
+            <div class="Inc">
+                <h3>Företaget</h3>
+                <ul>
+                    <li><a href="#">Jobba hos oss</a></li>
+                    <li><a href="#">Formgivare</a></li>
+                    <li><a href="#">Om oss</a></li>
+                </ul>
+            </div>
+            <div class="SMedia">
+                <h3>Sociala Medier</h3>
+                <ul>
+                    <li><a><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                    <li><a><i class="fa fa-instagram fa-2x"></i></a></li>
+                    <li><a><i class="fa fa-pinterest-square fa-2x"></i></a></li>
+                </ul>
+            </div>
+            <div class="News">
+                <h3>Nyhetsbrev</h3>
+                <input placeholder="Example@mail.com" />
+                <button type="button" name="button">Skicka</button>
+            </div>
         </footer>
     </div>
 
