--- a/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
@@ -14,11 +14,11 @@
     <div class="image-container1  "> <img src="@Url.Content("~/Content/Images/img1.jpg")" class="img1" alt="" >
     <img src="@Url.Content("~/Content/Images/img11.jpg")" class="img11" alt="" > </div>
 
-    <div class="image-container3  "> <img src="@Url.Content("~/Content/Images/img3.jpg")" class="img1" alt="" >
-    <img src="@Url.Content("~/Content/Images/img33.jpg")" class="img11" alt="" > </div>
+    
 
 
 
+    <img src="@Url.Content("~/Content/Images/img3.jpg")" alt="" class="img3" >
     <img src="@Url.Content("~/Content/Images/img4.jpg")" alt="" class="img4" >
     <img src="@Url.Content("~/Content/Images/img5.jpg")" alt="" class="img5" >
 </div>
