--- a/Webbprojekt-TE15C-1/Content/Site.css
+++ b/Webbprojekt-TE15C-1/Content/Site.css
@@ -39,23 +39,23 @@ h2 {
   color: #fff;
 }
 
-
 .image-container1 {
   float: left;
-  height: 280px;
-  width: 650px;
 }
 
+
 .image-container1 .img1 {
-  float: right;
-  width: 280px;
-  height: 650px;
+  float: left;
   opacity: 1;
     -webkit-transition: opacity 200ms linear;
     -moz-transition: opacity 200ms linear;
     -o-transition: opacity 200ms linear;
     -ms-transition: opacity 200ms linear;
     transition: opacity 200ms linear;
+}
+
+.image-container:hover img{
+
 }
 
 .image-container1:hover  .img1 {
@@ -80,14 +80,10 @@ h2 {
 
 .image-container2 {
   float: left;
-  width: 595px;
-  height: 350px;
 }
 
 .image-container2 .img2 {
   float: left;
-  width: 595px;
-  height: 350px;
   opacity: 1;
     -webkit-transition: opacity 200ms linear;
     -moz-transition: opacity 200ms linear;
@@ -121,21 +117,16 @@ h2 {
 
   float: left;
   margin-top: 20px;
-  height: 295px;
-  width: 315px;
+
 }
 
 .img4 {
   margin-top: 20px;
-  height: 295px;
   margin-left: 20px;
-  width: 315px;
 }
 
 .img5 {
   margin-top: 20px;
-  width: 1020px;
-  height: 500px;
 }
 
 
