--- a/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">s
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -43,34 +44,36 @@
         @RenderBody()
         <hr />
         <footer>
-            <div class="Kund">
-                <h3>Kundservice</h3>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Köpvillkor & Info</a></li>
-                    <li><a href="#">Kontakta oss</a></li>
-                </ul>
-            </div>
-            <div class="Inc">
-                <h3>Företaget</h3>
-                <ul>
-                    <li><a href="#">Jobba hos oss</a></li>
-                    <li><a href="#">Formgivare</a></li>
-                    <li><a href="#">Om oss</a></li>
-                </ul>
-            </div>
-            <div class="SMedia">
-                <h3>Sociala Medier</h3>
-                <ul>
-                    <li><a><i class="fa fa-facebook-square fa-2x"></i></a></li>
-                    <li><a><i class="fa fa-instagram fa-2x"></i></a></li>
-                    <li><a><i class="fa fa-pinterest-square fa-2x"></i></a></li>
-                </ul>
-            </div>
-            <div class="News">
-                <h3>Nyhetsbrev</h3>
-                <input placeholder="Example@mail.com" />
-                <button type="button" name="button">Skicka</button>
+            <div class="container-fluid">
+                <div class="col-md-3 Kund">
+                    <h3>Kundservice</h3>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Köpvillkor & Info</a></li>
+                        <li><a href="#">Kontakta oss</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 Inc">
+                    <h3>Företaget</h3>
+                    <ul>
+                        <li><a href="#">Jobba hos oss</a></li>
+                        <li><a href="#">Formgivare</a></li>
+                        <li><a href="#">Om oss</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 SMedia">
+                    <h3>Sociala Medier</h3>
+                    <ul>
+                        <li><a><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                        <li><a><i class="fa fa-instagram fa-3x"></i></a></li>
+                        <li><a><i class="fa fa-pinterest-square fa-3x"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 News">
+                    <h3>Nyhetsbrev</h3>
+                    <input placeholder="Example@mail.com" />
+                    <button type="button" name="button">Skicka</button>
+                </div>
             </div>
         </footer>
     </div>
