--- a/Webbprojekt-TE15C-1/Content/Site.css
+++ b/Webbprojekt-TE15C-1/Content/Site.css
@@ -55,18 +55,14 @@ h2 {
     transition: opacity 200ms linear;
 }
 
-.image-container:hover img{
-
-}
 
 .image-container1:hover  .img1 {
   opacity:0;
 }
 
 .image-container1 .img11{
-
-  position: absolute;
-  opacity:0;
+      position: absolute;
+   margin-left: -650px;
    -webkit-transition: opacity 200ms linear;
    -moz-transition: opacity 200ms linear;
    -o-transition: opacity 200ms linear;
@@ -80,11 +76,11 @@ h2 {
 
 
 .image-container2 {
-  float: left;
+  float: right;
 }
 
 .image-container2 .img2 {
-  float: left;
+  float: right;
   opacity: 1;
     -webkit-transition: opacity 200ms linear;
     -moz-transition: opacity 200ms linear;
@@ -98,8 +94,7 @@ h2 {
 }
 
 .image-container2 .img22{
-
-  position: absolute;
+position: absolute;
   opacity:0;
    -webkit-transition: opacity 200ms linear;
    -moz-transition: opacity 200ms linear;
