--- a/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Home/Index.cshtml
@@ -13,12 +13,14 @@
     <div class="image-container1  "> <img src="@Url.Content("~/Content/Images/img1.jpg")" class="img1" alt="" >
     <img src="@Url.Content("~/Content/Images/img11.jpg")" class="img11" alt="" > </div>
 
+    <div class="image-container3  "> <img src="@Url.Content("~/Content/Images/img3.jpg")" class="img3" alt="" >
+    <img src="@Url.Content("~/Content/Images/img33.jpg")" class="img33" alt="" > </div>
+
+    <div class="image-container4  "> <img src="@Url.Content("~/Content/Images/img4.jpg")" class="img4" alt="" >
+    <img src="@Url.Content("~/Content/Images/img44.jpg")" class="img44" alt="" > </div>
+
+    <div class="image-container5 "> <img src="@Url.Content("~/Content/Images/img5.jpg")" class="img5" alt="" >
+    <img src="@Url.Content("~/Content/Images/img55.jpg")" class="img55" alt="" > </div>
 
 
-
-
-
-    <img src="@Url.Content("~/Content/Images/img3.jpg")" alt="" class="img3" >
-    <img src="@Url.Content("~/Content/Images/img4.jpg")" alt="" class="img4" >
-    <img src="@Url.Content("~/Content/Images/img5.jpg")" alt="" class="img5" >
 </div>
