--- a/Webbprojekt-TE15C-1/Content/Site.css
+++ b/Webbprojekt-TE15C-1/Content/Site.css
@@ -5,7 +5,6 @@ body{
 }
 
 
-
 .navbar-collapse {
   background-color: #fff;
 }
@@ -26,6 +25,10 @@ body{
   background-color: #fff;
   margin-bottom: 100px;
   color: black;
+}
+
+.navbar-inverse .navbar-nav > li{
+  margin-left: 120px;
 }
 
 
