--- a/Webbprojekt-TE15C-1/Content/Site.css
+++ b/Webbprojekt-TE15C-1/Content/Site.css
@@ -334,3 +334,12 @@ form-group {
 a {
     color: black;
 }
+
+ul.nav.navbar-nav {
+    width: 200px;
+     
+}
+ul.nav.navbar-nav-right {
+    width: 200px;
+    
+}
