--- a/Webbprojekt-TE15C-1/Content/Site.css
+++ b/Webbprojekt-TE15C-1/Content/Site.css
@@ -337,3 +337,10 @@ a {
 .fa-facebook-square {
     color: #3B5998;
 }
+.fa-pinterest-square {
+    color: #CC2025;
+}
+#Instagram{
+    max-width: 58px;
+    padding-bottom: 20px;
+}
