--- a/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
@@ -7,8 +7,8 @@
 <div class="products">
     @foreach (var item in Model)
     {
-        <input type="text" id="" search" name="search" placeholder="Sök..." />
-        <input type="submit" value="sök" />
+        <input type="text" id="" search" name="search" placeholder="Skriv produktnamn..." />
+        <input type="submit" value="Sök" />
 
         <a href="@Url.Action("Details", "Products", new { id = item.ID })"
            class="product">
