--- a/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -30,7 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Start", "Index", "Home")</li>
                     <li>@Html.ActionLink("Produkter", "Index", "Products")</li>
-                    
+
                 </ul>
                 @Html.Partial("_LoginPartial")
 
