--- a/Webbprojekt-TE15C-1/Content/Site.css
+++ b/Webbprojekt-TE15C-1/Content/Site.css
@@ -4,6 +4,14 @@ font-family: 'Barlow Semi Condensed', sans-serif;
   background-color: black;
 }
 
+h1 {
+    font-family: 'Barlow Semi Condensed', sans-serif;
+}
+
+h4 {
+    font-family: 'Barlow Semi Condensed', sans-serif;
+}
+
 .label {
   color: white;
 }
