--- a/Webbprojekt-TE15C-1/Content/Site.css
+++ b/Webbprojekt-TE15C-1/Content/Site.css
@@ -215,6 +215,10 @@ position: absolute;
   margin-top: 100px;
 }
 
+.col-md-2 control-label {
+  font-style: normal;
+}
+
 .image-container5 .img5 {
   float: left;
   opacity: 1;
@@ -370,7 +374,7 @@ a {
 
 .img-responsive {
     width: 300px;
-    
+
 }
 
 .desc, span {
