--- a/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
@@ -11,7 +11,7 @@
     <h1>Produkter</h1>
     <hr />
     <br />
-    <input type="text" id="" search" name="search" placeholder="Skriv produktnamn..." />
+    <input type="text" id="search" name="search" placeholder="Skriv produktnamn..." />
     <input type="submit" value="Sök" />
     <br />
     <br />
