--- a/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
@@ -11,35 +11,38 @@
     <h1>Produkter</h1>
     <hr />
     <br />
-    <input type="text" id="search" name="search" placeholder="Skriv produktnamn..." />
-    <input type="submit" value="Sök" />
-    <br />
-    <br />
-    @foreach (var item in Model)
-    {
+    <div class="search">
+        <input type="text" id="search" name="search" placeholder="Skriv produktnamn..."  />
+        <input type="submit" value="Sök" id="searchbutton" />
+    </div>
+        <br />
+        <br />
+        @foreach (var item in Model)
+        {
 
             <div class="produkt">
-        <a href="@Url.Action("Details", "Products", new { id = item.ID })"
-           class="product">
+                <a href="@Url.Action("Details", "Products", new { id = item.ID })"
+                   class="product">
 
-            <img src="@Url.Content("~/Content/Images/table.jpg")" alt="Marble table"
-                 class="img-responsive" />
+                    <img src="@Url.Content("~/Content/Images/table.jpg")" alt="Marble table"
+                         class="img-responsive" />
 
-            <h2>@item.Name</h2>
-            <p>
-                <span class="price">@item.Price kr</span>
-                <span class="=" btn btn-success buy"> <br />
-                    <span class="glyphicon glyphicon-shopping-cart"></span>
-                    Köp
-                </span>
-            </p>
-            <p class="desc">@item.Description</p>
-        </a>
-                </div>
-    }
+                    <h2>@item.Name</h2>
+                    <p>
+                        <span class="price">@item.Price kr</span>
+                        <span class="=" btn btn-success buy">
+                            <br />
+                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                            Köp
+                        </span>
+                    </p>
+                    <p class="desc">@item.Description</p>
+                </a>
+            </div>
+        }
 
-    @using (Html.BeginForm("Index", "Products", FormMethod.Get))
-    {
+        @using (Html.BeginForm("Index", "Products", FormMethod.Get))
+        {
 
-    }
-</div>
+        }
+    </div>
