--- a/Webbprojekt-TE15C-1/Views/Products/Create.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Products/Create.cshtml
@@ -12,8 +12,8 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Product</h4>
+    <div class="form-horizontal-create">
+        <h4>Lägg till en produkt</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
