--- a/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
+++ b/Webbprojekt-TE15C-1/Views/Products/Index.cshtml
@@ -24,7 +24,7 @@
                 <a href="@Url.Action("Details", "Products", new { id = item.ID })"
                    class="product">
 
-                    <img src="@Url.Content("~/Content/Images/table.jpg")" alt="Marble table"
+                    <img src="@Url.Content("~/Content/Images/"+@item.Imagefile)" alt="Marble table"
                          class="img-responsive" />
 
                     <h2>@item.Name</h2>
